--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ license = "MIT/Apache-2.0"
 [dependencies]
 log = "0.4.11"
 newrelic-sys = "0.2.0"
-libc = { version = "0.2.79", optional = true }
+libc = "0.2.79"
 pin-project = { version = "1.0.0", optional = true }
 
 [dev-dependencies]
@@ -27,7 +27,7 @@ tokio = { version = "1.0.0", features = ["full"] }
 
 [features]
 default = []
-distributed_tracing = ["libc"]
+distributed_tracing = []
 async = ["pin-project"]
 
 [badges]
