--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ edition = "2018"
 repository = "https://github.com/sd2k/newrelic"
 license = "MIT/Apache-2.0"
 
+[lib]
+doctest = false
+
 [dependencies]
 log = "0.4.11"
 newrelic-sys = "0.2.0"
