--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,13 @@ edition = "2018"
 repository = "https://github.com/sd2k/newrelic"
 license = "MIT/Apache-2.0"
 
+[lib]
+doctest = false
+
 [dependencies]
 log = "0.4.11"
 newrelic-sys = "0.2.0"
-libc = "0.2.79"
+libc = { version = "0.2.79", optional = true }
 pin-project = { version = "1.0.0", optional = true }
 
 [dev-dependencies]
@@ -27,7 +30,7 @@ tokio = { version = "1.0.0", features = ["full"] }
 
 [features]
 default = []
-distributed_tracing = []
+distributed_tracing = ["libc"]
 async = ["pin-project"]
 
 [badges]
